// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ActivitiesTableRow - Snapshot > should render activity row - pending 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="group hover:bg-muted/30 transition-colors"
      >
        <td
          class="px-2 py-2 mobile:px-2 mobile:py-2 tablet:px-2 tablet:py-2 laptop:px-2 laptop:py-2 align-middle text-left text-xs whitespace-nowrap sticky left-0 z-20 bg-card group-hover:bg-muted transition-colors w-[280px] min-w-[280px] max-w-[280px] desktop:w-[360px] desktop:min-w-[360px] desktop:max-w-[360px]"
          style="box-shadow: 2px 0 5px -2px rgba(0,0,0,0.1);"
        >
          <div
            class="flex items-center gap-4 overflow-hidden"
          >
            <div
              class="h-9 w-9 rounded-full bg-accent flex items-center justify-center flex-shrink-0"
            >
              <span
                class="text-xs font-medium text-accent-foreground"
              >
                ?
              </span>
            </div>
            <div
              class="flex-1 min-w-0"
            >
              <p
                class="text-xs font-medium truncate"
                title="—"
              >
                —
              </p>
              <p
                class="text-xs mobile:text-[11px] tablet:text-[11px] laptop:text-[11px] text-muted-foreground mt-0.5 truncate"
                title="Editado em 15/01/2024 07:30"
              >
                Editado em 15/01/2024 07:30
              </p>
            </div>
          </div>
        </td>
        <td
          class="px-2 py-2 mobile:px-2 mobile:py-2 tablet:px-2 tablet:py-2 laptop:px-2 laptop:py-2 align-middle text-left text-xs whitespace-nowrap"
          style="width: 240px; min-width: 240px;"
        >
          <div
            class="min-w-0"
          >
            <p
              class="text-xs font-medium text-foreground truncate"
              title="Exercício de Listening"
            >
              Exercício de Listening
            </p>
            <p
              class="text-xs text-muted-foreground line-clamp-2 mt-0.5"
              title="Escute e responda"
            >
              Escute e responda
            </p>
          </div>
        </td>
        <td
          class="px-2 py-2 mobile:px-2 mobile:py-2 tablet:px-2 tablet:py-2 laptop:px-2 laptop:py-2 align-middle text-left text-xs whitespace-nowrap hidden sm:table-cell"
          style="width: 140px; min-width: 140px;"
        >
          <div
            class="flex items-center gap-2 text-muted-foreground min-w-0"
          >
            <svg
              class="lucide lucide-file-text h-3.5 w-3.5 flex-shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
              />
              <path
                d="M14 2v4a2 2 0 0 0 2 2h4"
              />
              <path
                d="M10 9H8"
              />
              <path
                d="M16 13H8"
              />
              <path
                d="M16 17H8"
              />
            </svg>
            <span
              class="text-xs truncate"
            />
          </div>
        </td>
        <td
          class="px-2 py-2 mobile:px-2 mobile:py-2 tablet:px-2 tablet:py-2 laptop:px-2 laptop:py-2 align-middle text-left text-xs whitespace-nowrap hidden sm:table-cell tabular-nums"
          style="width: 140px; min-width: 140px;"
        >
          <span
            class="text-muted-foreground truncate block"
            title="15/02/2024"
          >
            15/02/2024
          </span>
        </td>
        <td
          class="px-2 py-2 mobile:px-2 mobile:py-2 tablet:px-2 tablet:py-2 laptop:px-2 laptop:py-2 align-middle text-left text-xs whitespace-nowrap"
          style="width: 110px; min-width: 110px;"
        >
          <span
            class="inline-flex items-center gap-1.5 px-2.5 py-1 text-xs font-medium rounded-full border bg-muted text-muted-foreground border-border justify-center whitespace-nowrap"
          >
            <span
              class="w-1.5 h-1.5 rounded-full bg-muted-foreground"
            />
            pendente
          </span>
        </td>
        <td
          class="px-2 py-2 mobile:px-2 mobile:py-2 tablet:px-2 tablet:py-2 laptop:px-2 laptop:py-2 align-middle text-left text-xs whitespace-nowrap hidden sm:table-cell tabular-nums"
          style="width: 140px; min-width: 140px;"
        >
          <span
            class="text-muted-foreground truncate block"
            title="—"
          >
            —
          </span>
        </td>
        <td
          class="px-2 py-2 mobile:px-2 mobile:py-2 tablet:px-2 tablet:py-2 laptop:px-2 laptop:py-2 align-middle text-left text-xs whitespace-nowrap"
          style="width: 110px; min-width: 110px;"
        >
          <div
            class="flex items-center justify-end"
          >
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 rounded-md px-3 h-8 w-[7rem] shrink-0 border-none bg-warning text-white font-semibold hover:bg-warning/90 shadow text-xs"
              title="Atualizar"
            >
              Atualizar
            </button>
          </div>
        </td>
        <td
          class="px-2 py-2 mobile:px-2 mobile:py-2 tablet:px-2 tablet:py-2 laptop:px-2 laptop:py-2 align-middle text-left text-xs whitespace-nowrap"
          style="width: 90px; min-width: 90px;"
        >
          <div
            class="flex items-center gap-2"
          >
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground h-8 w-8"
              title="Ver detalhes"
            >
              <svg
                class="lucide lucide-eye h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="3"
                />
              </svg>
            </button>
            <button
              aria-expanded="false"
              aria-haspopup="menu"
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground h-8 w-8"
              data-state="closed"
              id="radix-:r2:"
              type="button"
            >
              <svg
                class="lucide lucide-ellipsis h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="1"
                />
                <circle
                  cx="19"
                  cy="12"
                  r="1"
                />
                <circle
                  cx="5"
                  cy="12"
                  r="1"
                />
              </svg>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ActivitiesTableRow - Snapshot > should render activity row with centralized content - sent 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="group hover:bg-muted/30 transition-colors"
      >
        <td
          class="px-2 py-2 mobile:px-2 mobile:py-2 tablet:px-2 tablet:py-2 laptop:px-2 laptop:py-2 align-middle text-left text-xs whitespace-nowrap sticky left-0 z-20 bg-card group-hover:bg-muted transition-colors w-[280px] min-w-[280px] max-w-[280px] desktop:w-[360px] desktop:min-w-[360px] desktop:max-w-[360px]"
          style="box-shadow: 2px 0 5px -2px rgba(0,0,0,0.1);"
        >
          <div
            class="flex items-center gap-4 overflow-hidden"
          >
            <div
              class="h-9 w-9 rounded-full bg-accent flex items-center justify-center flex-shrink-0"
            >
              <span
                class="text-xs font-medium text-accent-foreground"
              >
                ?
              </span>
            </div>
            <div
              class="flex-1 min-w-0"
            >
              <p
                class="text-xs font-medium truncate"
                title="—"
              >
                —
              </p>
              <p
                class="text-xs mobile:text-[11px] tablet:text-[11px] laptop:text-[11px] text-muted-foreground mt-0.5 truncate"
                title="Editado em 15/01/2024 07:30"
              >
                Editado em 15/01/2024 07:30
              </p>
            </div>
          </div>
        </td>
        <td
          class="px-2 py-2 mobile:px-2 mobile:py-2 tablet:px-2 tablet:py-2 laptop:px-2 laptop:py-2 align-middle text-left text-xs whitespace-nowrap"
          style="width: 240px; min-width: 240px;"
        >
          <div
            class="min-w-0"
          >
            <p
              class="text-xs font-medium text-foreground truncate"
              title="Exercício de Listening"
            >
              Exercício de Listening
            </p>
            <p
              class="text-xs text-muted-foreground line-clamp-2 mt-0.5"
              title="Escute e responda"
            >
              Escute e responda
            </p>
          </div>
        </td>
        <td
          class="px-2 py-2 mobile:px-2 mobile:py-2 tablet:px-2 tablet:py-2 laptop:px-2 laptop:py-2 align-middle text-left text-xs whitespace-nowrap hidden sm:table-cell"
          style="width: 140px; min-width: 140px;"
        >
          <div
            class="flex items-center gap-2 text-muted-foreground min-w-0"
          >
            <svg
              class="lucide lucide-file-text h-3.5 w-3.5 flex-shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
              />
              <path
                d="M14 2v4a2 2 0 0 0 2 2h4"
              />
              <path
                d="M10 9H8"
              />
              <path
                d="M16 13H8"
              />
              <path
                d="M16 17H8"
              />
            </svg>
            <span
              class="text-xs truncate"
            />
          </div>
        </td>
        <td
          class="px-2 py-2 mobile:px-2 mobile:py-2 tablet:px-2 tablet:py-2 laptop:px-2 laptop:py-2 align-middle text-left text-xs whitespace-nowrap hidden sm:table-cell tabular-nums"
          style="width: 140px; min-width: 140px;"
        >
          <span
            class="text-muted-foreground truncate block"
            title="15/02/2024"
          >
            15/02/2024
          </span>
        </td>
        <td
          class="px-2 py-2 mobile:px-2 mobile:py-2 tablet:px-2 tablet:py-2 laptop:px-2 laptop:py-2 align-middle text-left text-xs whitespace-nowrap"
          style="width: 110px; min-width: 110px;"
        >
          <span
            class="inline-flex items-center gap-1.5 px-2.5 py-1 text-xs font-medium rounded-full border bg-destructive-muted text-destructive border-destructive/20 justify-center whitespace-nowrap"
          >
            <span
              class="w-1.5 h-1.5 rounded-full bg-destructive"
            />
            Vencida
          </span>
        </td>
        <td
          class="px-2 py-2 mobile:px-2 mobile:py-2 tablet:px-2 tablet:py-2 laptop:px-2 laptop:py-2 align-middle text-left text-xs whitespace-nowrap hidden sm:table-cell tabular-nums"
          style="width: 140px; min-width: 140px;"
        >
          <span
            class="text-muted-foreground truncate block"
            title="—"
          >
            —
          </span>
        </td>
        <td
          class="px-2 py-2 mobile:px-2 mobile:py-2 tablet:px-2 tablet:py-2 laptop:px-2 laptop:py-2 align-middle text-left text-xs whitespace-nowrap"
          style="width: 110px; min-width: 110px;"
        >
          <div
            class="flex items-center justify-end"
          >
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background hover:bg-accent hover:text-accent-foreground rounded-md px-3 h-8 w-[7rem] shrink-0 opacity-50 cursor-not-allowed text-xs"
              disabled=""
              title="Aguardando"
            >
              Aguardando
            </button>
          </div>
        </td>
        <td
          class="px-2 py-2 mobile:px-2 mobile:py-2 tablet:px-2 tablet:py-2 laptop:px-2 laptop:py-2 align-middle text-left text-xs whitespace-nowrap"
          style="width: 90px; min-width: 90px;"
        >
          <div
            class="flex items-center gap-2"
          >
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground h-8 w-8"
              title="Ver detalhes"
            >
              <svg
                class="lucide lucide-eye h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="3"
                />
              </svg>
            </button>
            <button
              aria-expanded="false"
              aria-haspopup="menu"
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground h-8 w-8"
              data-state="closed"
              id="radix-:r0:"
              type="button"
            >
              <svg
                class="lucide lucide-ellipsis h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="1"
                />
                <circle
                  cx="19"
                  cy="12"
                  r="1"
                />
                <circle
                  cx="5"
                  cy="12"
                  r="1"
                />
              </svg>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
